compile_v17_log.txt
SDK: /Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk
---
Apple clang version 15.0.0 (clang-1500.3.9.4)
Target: arm64-apple-darwin23.6.0
Thread model: posix
InstalledDir: /Applications/Xcode_15.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
 "/Applications/Xcode_15.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang" -cc1 -triple arm64-apple-ios14.0.0 -Wundef-prefix=TARGET_OS_ -Wdeprecated-objc-isa-usage -Werror=deprecated-objc-isa-usage -Werror=implicit-function-declaration -emit-obj -mrelax-all --mrelax-relocations -disable-free -clear-ast-before-backend -disable-llvm-verifier -discard-value-names -main-file-name TrollRecorderBypass_v17.m -mrelocation-model pic -pic-level 2 -mframe-pointer=non-leaf -fno-strict-return -ffp-contract=on -fno-rounding-math -funwind-tables=1 -fobjc-msgsend-selector-stubs -target-sdk-version=17.5 -fvisibility-inlines-hidden-static-local-var -target-cpu apple-a7 -target-feature +v8a -target-feature +crypto -target-feature +fp-armv8 -target-feature +neon -target-feature +zcm -target-feature +zcz -target-feature +sha2 -target-feature +aes -target-abi darwinpcs -debugger-tuning=lldb -target-linker-version 1053.12 -v -fcoverage-compilation-dir=/Users/runner/work/CallRecorder/CallRecorder/ByPass -resource-dir /Applications/Xcode_15.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/15.0.0 -isysroot /Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk -internal-isystem /Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk/usr/local/include -internal-isystem /Applications/Xcode_15.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/15.0.0/include -internal-externc-isystem /Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk/usr/include -internal-externc-isystem /Applications/Xcode_15.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include -Wno-reorder-init-list -Wno-implicit-int-float-conversion -Wno-c99-designator -Wno-final-dtor-non-final-class -Wno-extra-semi-stmt -Wno-misleading-indentation -Wno-quoted-include-in-framework-header -Wno-implicit-fallthrough -Wno-enum-enum-conversion -Wno-enum-float-conversion -Wno-elaborated-enum-base -Wno-reserved-identifier -Wno-gnu-folding-constant -fdebug-compilation-dir=/Users/runner/work/CallRecorder/CallRecorder/ByPass -ferror-limit 19 -stack-protector 1 -fstack-check -mdarwin-stkchk-strong-link -fblocks -fencode-extended-block-signature -fregister-global-dtors-with-atexit -fgnuc-version=4.2.1 -fobjc-runtime=ios-14.0.0 -fobjc-arc -fobjc-exceptions -fexceptions -fmax-type-align=16 -fcommon -clang-vendor-feature=+disableNonDependentMemberExprInCurrentInstantiation -fno-odr-hash-protocols -clang-vendor-feature=+enableAggressiveVLAFolding -clang-vendor-feature=+revert09abecef7bbf -clang-vendor-feature=+thisNoAlignAttr -clang-vendor-feature=+thisNoNullAttr -mllvm -disable-aligned-alloc-awareness=1 -D__GCC_HAVE_DWARF2_CFI_ASM=1 -o /var/folders/dq/2t71w9pd3jx50vh3kp15_dt40000gn/T/TrollRecorderBypass_v17-b34bf6.o -x objective-c TrollRecorderBypass_v17.m
clang -cc1 version 15.0.0 (clang-1500.3.9.4) default target arm64-apple-darwin23.6.0
ignoring nonexistent directory "/Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Applications/Xcode_15.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/15.0.0/include
 /Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk/usr/include
 /Applications/Xcode_15.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 /Applications/Xcode_15.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS17.5.sdk/System/Library/Frameworks (framework directory)
End of search list.
TrollRecorderBypass_v17.m:90:18: warning: declaration of 'struct nlist_64' will not be visible outside of this function [-Wvisibility]
    const struct nlist_64 *symtab,
                 ^
TrollRecorderBypass_v17.m:103:40: error: subscript of pointer to incomplete type 'const struct nlist_64'
        uint32_t strtab_offset = symtab[symtab_index].n_un.n_strx;
                                 ~~~~~~^
TrollRecorderBypass_v17.m:90:18: note: forward declaration of 'struct nlist_64'
    const struct nlist_64 *symtab,
                 ^
TrollRecorderBypass_v17.m:172:88: warning: incompatible pointer types passing 'const struct nlist_64 *' to parameter of type 'const struct nlist_64 *' [-Wincompatible-pointer-types]
                    bypass_perform_rebinding_with_section(rebindings, &sect[j], slide, symtab, strtab, indirect_symtab);
                                                                                       ^~~~~~
TrollRecorderBypass_v17.m:90:28: note: passing argument to parameter 'symtab' here
    const struct nlist_64 *symtab,
                           ^
TrollRecorderBypass_v17.m:243:27: error: incompatible operand types ('CFStringRef' (aka 'const struct __CFString *') and 'NSString *')
        (__bridge id)(svc ?: @""), (__bridge id)(acc ?: @""), (__bridge id)(lbl ?: @"")
                      ~~~ ^  ~~~
TrollRecorderBypass_v17.m:243:54: error: incompatible operand types ('CFStringRef' (aka 'const struct __CFString *') and 'NSString *')
        (__bridge id)(svc ?: @""), (__bridge id)(acc ?: @""), (__bridge id)(lbl ?: @"")
                                                 ~~~ ^  ~~~
TrollRecorderBypass_v17.m:243:81: error: incompatible operand types ('CFStringRef' (aka 'const struct __CFString *') and 'NSString *')
        (__bridge id)(svc ?: @""), (__bridge id)(acc ?: @""), (__bridge id)(lbl ?: @"")
                                                                            ~~~ ^  ~~~
2 warnings and 4 errors generated.
